<resources>
    <string name="app_name">Registration App</string>
    <string name="registration_form">Registration Form</string>
    <string name="first_name">Enter your first name</string>
    <string name="last_name">Enter your last name</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="cpassword">Confirm your password</string>
    <string name="create">Create</string>



</resources>